# BlueberryIdentifyID

./: .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_human_review_is_final.py  0003_dataset_snapshots.py  0004_dataset_releases.py  0005_dataset_release_split_strategy_check.py  0006_training_preflight_reports.py  0007_training_runs.py  0008_image_dataset_audit_reports.py  0009_image_feature_extraction.py  0010_classical_tabular_baseline.py  0011_training_run_comparisons.py  0012_petri_segmentation.py  0013_petri_region_reviews.py  0014_petri_annotation_exports.py  0015_annotation_bundles.py  0016_annotation_quality_gates.py  0017_detection_training_runs.py  0018_detection_training_readiness_reports.py  0019_detection_training_environment_specs.py  0020_detection_training_artifact_policies.py  0021_detection_training_execution_runs.py  0022_model_evaluation_promotion_gate.py  0023_prediction_explanation_fields.py  0024_dataset_curation_runs.py  0026_snapshot_release_metadata.py  (+1 more)
docs/: development.md
scripts/: api_smoke_test.py  build_yolo_training_view.py  celery_smoke_test.py  check_postgres_migrations.py  check_repository_safety.py  check_training_docs.py  evaluate_smoke_model_candidate.py  inspect_local_training_fixture.py  inspect_local_yolo_training_run.py  run_local_yolo_training.py  seed_local_training_fixture.py  validate_training_manifest.py  validate_yolo_training_dataset.py
(+701 files in other folders)
