[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blueberry-microid"
version = "0.1.0"
description = "Preliminary, non-diagnostic multimodal screening support for microorganisms associated with blueberries (Petri dish + microscopy imagery)."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.18,<2.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.13,<3.0",
    "pillow>=10.1,<11.0",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.4,<2.0",
    "python-multipart>=0.0.20,<0.1",
    "psycopg[binary]>=3.3,<4.0",
    "celery>=5.4,<6.0",
    "redis>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10.0",
    "httpx>=0.28,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "postgres: tests that require a real PostgreSQL database (auto-skipped unless the DATABASE_URL environment variable points at PostgreSQL; run in the 'postgres-migrations' CI job).",
]
